--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 NEWS about changes for existing users.
 --------------------------------------
 
+Version 0.7.6 - Mon Oct 16 13:30:00 BST 2000
+
+	* No config changes.
+
 Version 0.7.5 - Mon Oct 16 12:30:00 BST 2000
 
 	* No config changes.
