MFH: Remove irc.linux.com from list (no longer on OpenProjects) and fix an old typo
git-svn-id: http://dircproxy.googlecode.com/svn/branches/BRANCH-1_0@568 36e7e03e-8437-11dd-8f23-d9c8888c2974

--- a/README
+++ b/README
@@ -73,7 +73,7 @@ Features
    the admin can enable and disable any command on
    a user-by-user basis.
  o Host and password based security.
- o Easy to configure and get
+ o Easy to configure and get running.
 
 All of dircproxy's features are completely configurable and can be
 enabled, disabled and adjusted through the configuration file.
@@ -142,8 +142,7 @@ Please submit bug reports at:
 
 	http://bugzilla.dircproxy.net/
 
-Also join us on the #dircproxy IRC channel on irc.openprojects.net and
-irc.linux.com.
+Also join us on the #dircproxy IRC channel on irc.openprojects.net.
 
 
 dircproxy is distributed according to the GNU General Public License.
