--- a/doc/dircproxy.1
+++ b/doc/dircproxy.1
@@ -2,7 +2,7 @@
 .\" Copyright (C) 2002 Scott James Remnant <scott@netsplit.com>.
 .\" All Rights Reserved.
 .\"
-.\" @(#) $Id: dircproxy.1,v 1.37 2002/02/06 10:06:40 scott Exp $
+.\" @(#) $Id: dircproxy.1,v 1.37.4.1 2002/11/21 14:06:43 scott Exp $
 .\"
 .\" This file is distributed according to the GNU General Public
 .\" License.  For full details, read the top of 'main.c' or the
@@ -289,6 +289,11 @@ Set to "" to not drop any modes.
 Which user modes to refuse to accept from a server.  If the server
 attempts to set one of these, then the connection to it will be dropped
 and the next server in the list will be tried.
+
+A good setting for many people would be "+r", as most servers use that
+to mean your connection is restricted.  Don't set it to this if you're
+on DALnet however, DALnet uses +r to indicate you have registered with
+NickServ (gee, thanks guys!).
 
 Set to "" to not refuse any modes.
 
