[MFH] Update copyrights to include 2003
git-svn-id: http://dircproxy.googlecode.com/svn/branches/BRANCH-1_0@610 36e7e03e-8437-11dd-8f23-d9c8888c2974

--- a/doc/dircproxy.1
+++ b/doc/dircproxy.1
@@ -1,8 +1,7 @@
 .TH dircproxy 1 "11 Jan 2001"
-.\" Copyright (C) 2002 Scott James Remnant <scott@netsplit.com>.
-.\" All Rights Reserved.
+.\" Copyright (C) 2000,2001,2002,2003 Scott James Remnant <scott@netsplit.com>.
 .\"
-.\" @(#) $Id: dircproxy.1,v 1.37.4.1 2002/11/21 14:06:43 scott Exp $
+.\" @(#) $Id: dircproxy.1,v 1.37.4.2 2002/12/29 21:33:36 scott Exp $
 .\"
 .\" This file is distributed according to the GNU General Public
 .\" License.  For full details, read the top of 'main.c' or the
@@ -944,6 +943,6 @@ Please submit and review bug reports at:
 Written by Scott James Remnant <scott@netsplit.com>.
 
 .SH COPYRIGHT
-Copyright (C) 2002 Scott James Remnant.  All Rights Reserved.
+Copyright (C) 2000,2001,2002,2003 Scott James Remnant <scott@netsplit.com>.
 \fBdircproxy\fR is distributed under the \fIGNU General Public
 License\fR.
