--- a/doc/dircproxy-crypt.1
+++ b/doc/dircproxy-crypt.1
@@ -1,8 +1,7 @@
 .TH dircproxy-crypt 1 "11 Jan 2001"
-.\" Copyright (C) 2002 Scott James Remnant <scott@netsplit.com>.
-.\" All Rights Reserved.
+.\" Copyright (C) 2000,2001,2002,2003 Scott James Remnant <scott@netsplit.com>.
 .\"
-.\" @(#) $Id: dircproxy-crypt.1,v 1.5 2002/02/06 10:06:40 scott Exp $
+.\" @(#) $Id: dircproxy-crypt.1,v 1.5.4.1 2002/12/29 21:33:36 scott Exp $
 .\"
 .\" This file is distributed according to the GNU General Public
 .\" License.  For full details, read the top of 'main.c' or the
@@ -53,6 +52,6 @@ Please submit and review bug reports at:
 Written by Scott James Remnant <scott@netsplit.com>.
 
 .SH COPYRIGHT
-Copyright (C) 2002 Scott James Remnant.  All Rights Reserved.
+Copyright (C) 2000,2001,2002,2003 Scott James Remnant <scott@netsplit.com>.
 \fBdircproxy\fR is distributed under the \fIGNU General Public
 License\fR.
