--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,18 @@
 NEWS about changes for existing users.
 --------------------------------------
 
+Version 0.7.6 - Mon Oct 16 13:30:00 BST 2000
+
+	* No config changes.
+
+Version 0.7.5 - Mon Oct 16 12:30:00 BST 2000
+
+	* No config changes.
+
+Version 0.7.4 - Tue Oct 10 13:30:00 BST 2000
+
+	* No config changes.
+
 Version 0.7.3 - Wed Sep 27 17:55:00 BST 2000
 
 	* New config file option - "disconnect_on_detach"
